--- a/EBMAforecast/NAMESPACE
+++ b/EBMAforecast/NAMESPACE
@@ -1,3 +1,8 @@
 exportClasses(Ensemble)
 exportClasses(ForecastData)
+exportClasses(ForecastDataLogit)
+exportClasses(ForecastDataNormal)
+exportMethods(calibrateEnsemble)
+exportMethods(fitEnsemble)
+exportMethods(initialize)
 exportMethods(makeForecastData)
