updated the fit funciton, started FDatFitLogit class

--- a/EBMAforecast/NAMESPACE
+++ b/EBMAforecast/NAMESPACE
@@ -1,4 +1,5 @@
 exportClasses(Ensemble)
+exportClasses(FDatFitLogit)
 exportClasses(ForecastData)
 exportClasses(ForecastDataLogit)
 exportClasses(ForecastDataNormal)
