--- a/EBMAforecast/DESCRIPTION
+++ b/EBMAforecast/DESCRIPTION
@@ -9,10 +9,12 @@ Description: Ensemble BMA for logistic regression
 License: GPL (>= 2)
 Depends:
     separationplot,
-    ensembleBMA
+    ensembleBMA,
+    Hmisc
 LazyLoad: yes
 Collate:
     'forecastData.R'
     'calibrateEnsemble.R'
     'fitEnsemble.R'
     'fDatFitLogit.R'
+    'compareModels.R'
