--- a/EBMAforecast/NAMESPACE
+++ b/EBMAforecast/NAMESPACE
@@ -1,9 +1,17 @@
+exportClasses(CompareModels)
 exportClasses(Ensemble)
 exportClasses(FDatFitLogit)
 exportClasses(ForecastData)
 exportClasses(ForecastDataLogit)
 exportClasses(ForecastDataNormal)
 exportMethods(calibrateEnsemble)
+exportMethods(compareModels)
 exportMethods(fitEnsemble)
 exportMethods(initialize)
 exportMethods(makeForecastData)
+import("for")
+import(Hmisc)
+import(Method)
+import(logit)
+importFrom(Hmisc,somers2)
+importMethodsFrom(Hmisc,somers2)
