Got basic plotting and print working for paper plots tables
Next task is to get the datasets integrated and the demo

--- a/EBMAforecast/NAMESPACE
+++ b/EBMAforecast/NAMESPACE
@@ -4,11 +4,16 @@ exportClasses(FDatFitLogit)
 exportClasses(ForecastData)
 exportClasses(ForecastDataLogit)
 exportClasses(ForecastDataNormal)
+exportClasses(SummaryForecastData)
 exportMethods(calibrateEnsemble)
 exportMethods(compareModels)
 exportMethods(fitEnsemble)
 exportMethods(initialize)
 exportMethods(makeForecastData)
+exportMethods(plot)
+exportMethods(print)
+exportMethods(show)
+exportMethods(summary)
 import("for")
 import(Hmisc)
 import(Method)
