All basic functionality up and running
demo complete ... remaining tasks is to fight with importing functions,
S3 generics, help file ennumeration/documentation, and get it to all
pass the cran checks.

--- a/EBMAforecast/DESCRIPTION
+++ b/EBMAforecast/DESCRIPTION
@@ -10,7 +10,7 @@ License: GPL (>= 2)
 Depends:
     separationplot,
     ensembleBMA,
-    Hmisc
+    plyr
 LazyLoad: yes
 Collate:
     'forecastData.R'
