--- a/EBMAforecast/NAMESPACE
+++ b/EBMAforecast/NAMESPACE
@@ -4,9 +4,19 @@ exportClasses(ForecastData)
 exportClasses(ForecastDataLogit)
 exportClasses(ForecastDataNormal)
 exportClasses(SummaryForecastData)
+exportMethods("setModelNames<-")
+exportMethods("setOutcomeCalibration<-")
+exportMethods("setOutcomeTest<-")
+exportMethods("setPredCalibration<-")
+exportMethods("setPredTest<-")
 exportMethods(calibrateEnsemble)
 exportMethods(compareModels)
 exportMethods(fitEnsemble)
+exportMethods(getModelNames)
+exportMethods(getOutcomeCalibration)
+exportMethods(getOutcomeTest)
+exportMethods(getPredCalibration)
+exportMethods(getPredTest)
 exportMethods(initialize)
 exportMethods(makeForecastData)
 exportMethods(plot)
