Passes R checks & improved documentation

--- a/EBMAforecast/DESCRIPTION
+++ b/EBMAforecast/DESCRIPTION
@@ -10,7 +10,8 @@ License: GPL (>= 2)
 Depends:
     separationplot,
     ensembleBMA,
-    plyr
+    plyr,
+    methods
 LazyLoad: yes
 Collate:
     'forecastData.R'
