Killing the documentation-related warning
Almost got it....

--- a/EBMAforecast/DESCRIPTION
+++ b/EBMAforecast/DESCRIPTION
@@ -4,20 +4,21 @@ Title: Ensemble BMA Forecasting
 Version: 0.3
 Date: 2012-05-06
 Author: Michael D. Ward and Jacob M. Montgomery
-Maintainer: Jacob Montgomery <jmm61@duke.edu>
+Maintainer: Jacob Montgomery <jacob.montgomery@wustl.edu>
 Description: Ensemble BMA for logistic regression
 License: GPL (>= 2)
 Depends:
     separationplot,
     ensembleBMA,
     plyr,
-    methods
+    methods,
+    Hmisc
 LazyLoad: yes
 Collate:
     'forecastData.R'
+    'fitEnsemble.R'
     'calibrateEnsemble.R'
     'fDatFitLogit.R'
-    'fitEnsemble.R'
     'compareModels.R'
     'document-data.R'
     'summary.R'
