Starting to remake *everything* into arrays
Note to self ... next time just start this way.

--- a/EBMAforecast/DESCRIPTION
+++ b/EBMAforecast/DESCRIPTION
@@ -12,7 +12,8 @@ Depends:
     ensembleBMA,
     plyr,
     methods,
-    Hmisc
+    Hmisc,
+    abind
 LazyLoad: yes
 Collate:
     'forecastData.R'
