most tests done, working on comparison to raftery package

--- a/EBMAforecast/DESCRIPTION
+++ b/EBMAforecast/DESCRIPTION
@@ -16,9 +16,9 @@ Depends:
     abind
 LazyLoad: yes
 Collate:
-    'ForecastData.R'
+    'forecastData.R'
     'calibrateEnsemble.R'
-    'FDatFitLogit.R'
+    'fDatFitLogit.R'
     'compareModels.R'
     'document-data.R'
     'summary.R'
