Gives correct answer with basic, weight and wisdom give values but need to test

--- a/EBMAforecast/DESCRIPTION
+++ b/EBMAforecast/DESCRIPTION
@@ -19,10 +19,10 @@ Collate:
     'forecastData.R'
     'calibrateEnsemble.R'
     'fDatFitLogit.R'
+    'fDatFitNormal.R'
     'compareModels.R'
     'document-data.R'
     'summary.R'
-    'FDatFitNormal.R'
     'fitEnsembleLogit.R'
     'fitEnsembleNormal.R'
     'makeForecastData.R'
