--- a/EBMAforecast/DESCRIPTION
+++ b/EBMAforecast/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: EBMAforecast
 Type: Package
 Title: Ensemble BMA Forecasting
-Version: 0.4
-Date: 2012-08-08
-Author: Jacob M. Montgomery, Florian Hollenbach, and Michael D. Ward
+Version: 0.43
+Date: 2012-08-17
+Author: Jacob M. Montgomery, Florian M. Hollenbach, and Michael D. Ward
 Maintainer: Jacob Montgomery <jacob.montgomery@wustl.edu>
 Description: Ensemble BMA for social science data
 License: GPL (>= 2)
