--- a/rcpp_pack/oldversion/DESCRIPTION
+++ b/rcpp_pack/oldversion/DESCRIPTION
@@ -2,7 +2,7 @@ Package: EBMAforecast
 Type: Package
 Title: Ensemble BMA Forecasting
 Version: 0.5
-Date: 2015-02-10
+Date: 2014-08-17
 Author: Jacob M. Montgomery, Florian M. Hollenbach, and Michael D. Ward
 Maintainer: Jacob Montgomery <jacob.montgomery@wustl.edu>
 Description: Ensemble BMA for social science data
@@ -14,5 +14,6 @@ Depends:
     methods,
     Hmisc,
     abind
-Imports: Rcpp (>= 0.11.3)
+Imports:
+    Rcpp (>= 0.11.2)
 LinkingTo: Rcpp
