--- a/rcpp_pack/EBMAforecast.Rcheck/EBMAforecast/DESCRIPTION
+++ b/rcpp_pack/EBMAforecast.Rcheck/EBMAforecast/DESCRIPTION
@@ -7,12 +7,7 @@ Author: Jacob M. Montgomery, Florian M. Hollenbach, and Michael D. Ward
 Maintainer: Jacob Montgomery <jacob.montgomery@wustl.edu>
 Description: Ensemble BMA for social science data
 License: GPL (>= 2)
-Depends:
-    separationplot,
-    ensembleBMA,
-    plyr,
-    methods,
-    Hmisc,
-    abind
+Depends: separationplot, ensembleBMA, plyr, methods, Hmisc, abind
 Imports: Rcpp (>= 0.11.3)
 LinkingTo: Rcpp
+Built: R 3.1.2; x86_64-apple-darwin14.0.0; 2015-02-11 16:34:48 UTC; unix
