getting package ready for CRAN

--- a/rcpp_pack/EBMAforecast/DESCRIPTION
+++ b/rcpp_pack/EBMAforecast/DESCRIPTION
@@ -4,8 +4,8 @@ Title: Ensemble BMA Forecasting
 Version: 0.5
 Date: 2015-02-11
 Author: Jacob M. Montgomery, Florian M. Hollenbach, and Michael D. Ward
-Maintainer: Jacob Montgomery <jacob.montgomery@wustl.edu>
-Description: Ensemble BMA for social science data
+Maintainer: Florian M. Hollenbach <florian.hollenbach@tamu.edu>
+Description: Ensemble BMA for social science data.
 License: GPL (>= 2)
 Depends:
     separationplot,
