--- a/rcpp_pack/EBMAforecast.Rcheck/EBMAforecast/NAMESPACE
+++ b/rcpp_pack/EBMAforecast.Rcheck/EBMAforecast/NAMESPACE
@@ -24,8 +24,10 @@ exportMethods(print)
 exportMethods(show)
 exportMethods(summary)
 import(abind)
+import(graphics)
 import(methods)
 import(separationplot)
+import(stats)
 importFrom(Hmisc,somers2)
 importFrom(Rcpp,sourceCpp)
 importFrom(plyr,aaply)
